force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__IsSystemGenerated__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__IsSystemGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is a system generated agreement</description>
    <inlineHelpText>Indicates whether this is a system generated agreement</inlineHelpText>
    <label>Is System Generated</label>
    <type>Checkbox</type>
</CustomField>