force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__IsTaskPending__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__IsTaskPending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether there are any tasks pending for the agreement</description>
    <inlineHelpText>Indicates whether there are any tasks pending for the agreement</inlineHelpText>
    <label>Is Task Pending</label>
    <type>Checkbox</type>
</CustomField>