force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__LegalEntityId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__LegalEntityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the legal entity associated with the agreement. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</description>
    <inlineHelpText>ID of the legal entity associated with the agreement. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</inlineHelpText>
    <label>Legal Entity</label>
    <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>