force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__LocationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated account location</description>
    <inlineHelpText>ID of the associated account location</inlineHelpText>
    <label>Location</label>
    <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>