force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__PartnerAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__PartnerAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the partner account who created the agreement on behalf of a customer</description>
    <inlineHelpText>ID of the partner account who created the agreement on behalf of a customer</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Partner)</relationshipLabel>
    <relationshipName>AgreementsPartner</relationshipName>
    <type>Lookup</type>
</CustomField>