force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the payment term associated with the agreement</description>
    <inlineHelpText>ID of the payment term associated with the agreement</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>