force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__PriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__PriceListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated price list</description>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>