force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__PurchaseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__PurchaseId__c</fullName>
    <description>The default purchase identifier associated with the agreement</description>
    <externalId>true</externalId>
    <inlineHelpText>The default purchase identifier associated with the agreement</inlineHelpText>
    <label>Purchase Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>