force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__QTCProfile__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__QTCProfile__c</fullName>
    <description>The QTC profile associated with the agreement</description>
    <inlineHelpText>“Regular” will process the agreement as a single entity. Select “Split” before clicking on Configure Products to allow the subdivision of the agreement into multiple smaller agreements for business/volume related reasons or multiple sold to accounts.</inlineHelpText>
    <label>QTC Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>