force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__ShipToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__ShipToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the ship to account associated with the agreement</description>
    <inlineHelpText>ID of the ship to account associated with the agreement</inlineHelpText>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Ship To)</relationshipLabel>
    <relationshipName>AgreementsShipTo</relationshipName>
    <type>Lookup</type>
</CustomField>