force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__SingleTransactionAdjustment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__SingleTransactionAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether single transaction adjustment is in effect for the agreement</description>
    <inlineHelpText>Indicates whether single transaction adjustment is in effect for the agreement</inlineHelpText>
    <label>Single Transaction Adjustment</label>
    <type>Checkbox</type>
</CustomField>