force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__SyncAssetChangesToAgreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__SyncAssetChangesToAgreement__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether asset changes are synchronized to open agreements</description>
    <inlineHelpText>Indicates whether asset changes are synchronized to open agreements</inlineHelpText>
    <label>Sync Asset Changes To Agreement</label>
    <type>Checkbox</type>
</CustomField>