force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMConfig__SyncWithOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__SyncWithOpportunity__c</fullName>
    <description>Synchronize the agreement with the associated opportunity</description>
    <formula>IF ( LEN(Apttus__Related_Opportunity__c ) &gt; 0, HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementSyncWithOpportunity?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_CMConfig__Button_SynchronizeWithOpportunity&quot;, &quot;Sync with Opportunity&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Synchronize with Opportunity</label>
    <type>Text</type>
</CustomField>