force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_CMDSign__CheckESignatureStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__CheckESignatureStatus__c</fullName>
    <description>Check eSignature Status</description>
    <formula>IF(
	AND(
		ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;),
		ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;),
		NOT(ISNULL(Apttus_CMDSign__DocuSignEnvelopeId__c)),
		NOT(ISBLANK(Apttus_CMDSign__DocuSignEnvelopeId__c))
        ),
        HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignEnvStatusByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__CheckStatus&quot;,&quot;Check eSignature Status&quot;), &quot;_self&quot;),
	NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check eSignature Status</inlineHelpText>
    <label>Check eSignature Status</label>
    <type>Text</type>
</CustomField>