force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus_QPComply__RelatedProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPComply__RelatedProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated quote/proposal</description>
    <label>Related Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>