force-app/main/default/objects/Apttus__APTS_Agreement__c/validationRules/Apttus__Term_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Apttus__Term_Validation</fullName>
    <active>true</active>
    <description>Validate that Term is entered correctly</description>
    <errorConditionFormula>AND( ( Apttus__Perpetual__c ),  (  Apttus__Term_Months__c  ) &gt; 0 )</errorConditionFormula>
    <errorDisplayField>Apttus__Term_Months__c</errorDisplayField>
    <errorMessage>Cannot enter both Perpetual and Term.  Please enter only one of the values</errorMessage>
</ValidationRule>