force-app/main/default/objects/Apttus__APTS_Agreement__c/validationRules/Apttus__Term_Validation_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Apttus__Term_Validation_3</fullName>
    <active>false</active>
    <description>Validate that Term is entered correctly (DEPRECATED)</description>
    <errorConditionFormula>AND( (  Apttus__Term_Months__c ) &gt; 0,  NOT(ISNULL(  Apttus__Contract_End_Date__c )) )</errorConditionFormula>
    <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
    <errorMessage>Cannot enter both Term and End Date.  Please enter only one of the values</errorMessage>
</ValidationRule>