force-app/main/default/objects/Apttus__APTS_Agreement__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus__FF_Agreement_Number__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>Apttus__Contract_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>